<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent" android:layout_width="match_parent"
    android:background="#363636"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="migra.br.smart.activityLogin.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/migra_automacao249"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#fc2323"
                android:text="99350-1798/98095-0667"
                android:textStyle="bold" />
            <Spinner
                android:id="@+id/spEmpresas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30px"
                android:layout_weight="1"
                />
                <EditText
                    android:id="@+id/codVend"
                    style="?android:textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/codigo_vendedor"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"

                    />
            <TableRow>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/senha_vendedor"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_login_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:visibility="gone"
                    />
                <Button
                    android:id="@+id/btKeyBeta"
                    style="?android:textAppearanceSmall"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_key_beta"
                    android:textStyle="bold"
                    android:visibility="gone"/>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <Button
                        android:id="@+id/btLogin"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:textSize="20dp"

                        android:text="@string/action_login"
                        android:textStyle="bold" />

                </TableRow>
            </TableRow>

        </TableLayout>
    </ScrollView>

</LinearLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#fc2323"
        android:textStyle="bold"
        android:layout_marginRight="220dp"
        android:layout_marginBottom="20dp"
        android:text="Ver.: 1.0.12" />
    <ImageButton
        android:id="@+id/btAtvLoginUpload"
        style="?android:textAppearanceSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="20dp"
        android:background="#0000"
        android:scaleType="center"
        android:src="@drawable/exportar_para_internet"/>
    <ImageButton
        android:id="@+id/btLoginDownload"
        style="?android:textAppearanceSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="20dp"
        app:backgroundTint="#0000"
        android:scaleType="center"
        android:src="@drawable/importar_da_internet"/>
    <ImageButton
        android:id="@+id/fabConfig"

        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#0000"
        app:backgroundTint="#ff0000"
        android:scaleType="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/config_tools50x50"
        />

</android.support.design.widget.CoordinatorLayout>